Invoke make without ant